[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets_2D/dot_red.png" type="Texture" id=1]
[ext_resource path="res://Screen_Enemies/Missile.gd" type="Script" id=2]
[ext_resource path="res://hide.tres" type="Animation" id=3]
[ext_resource path="res://fade_in.tres" type="Animation" id=4]
[ext_resource path="res://fade_out.tres" type="Animation" id=5]

[sub_resource type="CylinderShape" id=4]
height = 1.0
radius = 0.5

[sub_resource type="CylinderShape" id=5]
height = 1.0
radius = 0.5

[sub_resource type="CylinderShape" id=6]
height = 1.24557
radius = 10.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Missile" type="KinematicBody" groups=["Missle"]]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.746994, 0 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0149219, 0.341798, 0.287563 )
aabb = AABB( -1.1613, -0.622172, -1.66096, 2.32259, 1.24434, 3.32193 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.60145e-05, 0.369911, -0.00549707 )
visible = false
shape = SubResource( 4 )

[node name="PlayerDetector" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="PlayerDetector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.60145e-05, 0.369911, -0.00549707 )
shape = SubResource( 5 )

[node name="DangerZone" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="DangerZone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.339543, 0 )
shape = SubResource( 6 )

[node name="LifeTime" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/fade_in = ExtResource( 4 )
anims/fade_out = ExtResource( 5 )
anims/hide = ExtResource( 3 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, -2.18557e-08, -1, 0, 0.5, -4.37114e-08, 0, 1, 0 )
opacity = 0.0
texture = ExtResource( 1 )

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="DangerZone" to="." method="_on_DangerZone_body_entered"]
[connection signal="body_exited" from="DangerZone" to="." method="_on_DangerZone_body_exited"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
